src/main/java/com/example/articles/errors/MagazineNotFoundException.java
package com.example.articles.errors;

public class MagazineNotFoundException extends RuntimeException {
    public MagazineNotFoundException(String message) {
        super(message);
    }
}
